Feature/Issue#18 Complete Functional Sign-In Screen Implementation (#58)
* Exploring repo

* Exploring repo

* Update .gitignore

* Update .gitignore

* Advances on Login Function

* Login Function Complete

* Login Function Complete

* Fixed Layer Separation Issues and use of navigation

* Relocated state variables and simplified onEvent functions

* Fix navbar visibility issue when navigating from sign-in to home

* Change from State Flow to Flow in some layers

* Change from State Flow to Flow in some layers

---------

Co-authored-by: Daniel Escalante Perez <91741110+Dani32002@users.noreply.github.com>

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -27,6 +27,7 @@ roomKtx = "2.6.1"
 roomCompiler = "2.6.1"
 roomRuntime = "2.6.1"
 secretsGradlePlugin = "2.0.1"
+firebaseCrashlyticsBuildtools = "3.0.2"
 
 [libraries]
 accompanist-permissions = { module = "com.google.accompanist:accompanist-permissions", version.ref = "accompanistPermissions" }
@@ -65,6 +66,7 @@ play-services-location = { module = "com.google.android.gms:play-services-locati
 play-services-maps = { module = "com.google.android.gms:play-services-maps", version.ref = "playServicesMaps" }
 room-runtime = { module = "androidx.room:room-runtime", version.ref = "roomRuntime" }
 secrets-gradle-plugin = { module = "com.google.android.libraries.mapsplatform.secrets-gradle-plugin:secrets-gradle-plugin", version.ref = "secretsGradlePlugin" }
+firebase-crashlytics-buildtools = { group = "com.google.firebase", name = "firebase-crashlytics-buildtools", version.ref = "firebaseCrashlyticsBuildtools" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
