Inclusion of tag for turning off automatic screen tracking. Inclusion of the analytics object in the AppModule for DI. Inclusion of the Firebase Analytics dependency. Creation of the ScreenOpened and ScreenClosed event. Calling of the new events in the HomeScreen for screen time tracking. Inclusion of the timer methods in the HomeViewModel.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.RestaU"
         tools:targetApi="31">
+        <meta-data android:name="google_analytics_automatic_screen_reporting_enabled" android:value="false" />
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="${MAPS_API_KEY}" />
